HFP-1426 Fix interactions jumping when new ones are added

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -29,7 +29,8 @@
   margin: 0 0 0 0.25em;
   list-style: none;
   padding: 0;
-  float: none;
+  float: left;
+  height: 100%;
 }
 .h5p-interactive-video-dragnbar .h5p-dragnbar-li {
   position: relative;
